--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <renjin.version>[0.9.2726,)</renjin.version>
         <spring-boot.version>[2.2.0.RELEASE,)</spring-boot.version>
+        <!-- must use an exact version for plugins -->
+        <spring-boot-plugin.version>2.3.4.RELEASE</spring-boot-plugin.version>
     </properties>
 
     <repositories>
@@ -75,7 +77,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring-boot-plugin.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>
