--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>se.alipsa</groupId>
     <artifactId>renjin-spring-boot-starter</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>Renjin Spring Boot STarter</name>
-    <description>Spring Boot Starter for integrating Renjing with your Spring Boot Application</description>
+    <description>Spring Boot Starter for integrating Renjin with your Spring Boot Application</description>
     <url>https://github.com/perNyfelt/renjin-spring-boot-starter</url>
     <licenses>
         <license>
